tdf#94792 performance regression for xlsx with chart with >1000 data labels

this speeds things up by 30% for me

Change-Id: I7fa99e91b0b4f354329803b9c8fab827bd367dac
Reviewed-on: https://gerrit.libreoffice.org/55812
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 20083840700518d8c0ec314974249254eb859de7)